# CMakeList.txt : CMake project for prog2asscmake, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (prog2asscmake "prog2asscmake.cpp" "prog2asscmake.h")

# TODO: Add tests and install targets if needed.
